--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdminActivity"></activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".spinner.SpinnerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".ValidasiActivity"></activity>
+        <activity android:name=".AdminActivity" />
+        <activity android:name=".LoginActivity">
+
+        </activity>
+        <activity android:name=".ValidasiActivity" />
         <activity android:name=".MainActivity" />
     </application>
 
