--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".splash.SplashScreenActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            >
+        <activity android:name=".bottom_dialog.BottomDialogActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".spinner.SpinnerActivity">
+        <activity
+            android:name=".splash.SplashScreenActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
 
         </activity>
+        <activity android:name=".spinner.SpinnerActivity" />
         <activity android:name=".AdminActivity" />
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".ValidasiActivity" />
         <activity android:name=".MainActivity" />
     </application>
